# test_cgo_with_static_lib

./: .gitignore  main.go  recurrent.sh
gowapper/: BUILD.bazel  go.mod  wapper.go
gowapper/lib/: BUILD.bazel  build_static_lib.sh  test_calc.c  test_calc.h
lib/: build_static_lib.sh
main/: BUILD.bazel  go.mod  main.go  repositories.bzl
