load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/Icemap/test_cgo_with_static_lib/main
# gazelle:proto disable
gazelle(
    name = "gazelle",
)

go_library(
    name = "main_lib",
    srcs = ["main.go"],
    deps = ["@com_github_icemap_test_cgo_with_static_lib_gowapper//:gowapper"],
    importpath = "github.com/Icemap/test_cgo_with_static_lib/main",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "main",
    embed = [":main_lib"],
    visibility = ["//visibility:public"],
)
